# photo_ticket_api

./: README.md  db.sqlite3  manage.py  pyproject.toml
photo_ticket_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tickets/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
tickets/migrations/: 0001_initial.py  0002_alter_ticket_current_images.py
user_management/: serializers.py  urls.py  views.py
